# MSI2

./: README.md
project1/Python/: AntColonyAlgorithm.ipynb  Generate Figures.ipynb  Read Data.ipynb  Test_of_alt_colony.ipynb  Test_of_ant_colony.ipynb
project1/Python/AntColony/: LICENSE  setup.cfg
project1/Python/AntColony/src/AntColony/: AntColony.py  __init__.py
project1/Python/AntColony/src/AntColony.egg-info/: SOURCES.txt  top_level.txt
project1/src/: Test_of_ant_colony.ipynb  Tests_of_plots_of_datasets.ipynb
project1/src/AntColony/: LICENSE  setup.cfg
project1/src/JupyterNotebooks/: Additional parameters for datasets.ipynb  CaseStudy.ipynb  Generate_Figures_for_documents.ipynb  Median Plots.ipynb  Plots for raport.ipynb  Tests_of_plots_of_datasets.ipynb
project1/src/script/: solve_multiple_problems.py  solve_single_problem.py
project1/src/scripts/: solve_multiple_problems.py  solve_single_problem.py
project2/: Example_game.ipynb  Position_class.ipynb  Taifho-zasady_gry.txt
project2/src/Game_py/: C_parameter_experiment.py  G_parameter_experiment.py  MCTS.py  Node.py  basic_MCTS_experiment.py  fair_play_experiment.py  main.py  tournament_experiment.py
project2/src/Game_py/results/: 1_tournament_UCT_with_both_heuristics_experiment.csv  2_tournament_PUCT_h_vs_PUTC_h_G_experiment.csv  3_tournament_UCT_h_vs_PUTC_h_experiment.csv  README.txt  (+5 more)
project2/src/Taifho/: LICENSE  README.md  setup.cfg
project2/src/Taifho/src/Taifho/: Position.py  __init__.py  utilities.py
project2/src/Taifho/src/Taifho.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+7 files in other folders)
