[metadata]
name = Taifho
version = 0.1
author = Przemysław Adam Chojecki
author_email = premysl.choj@gmail.com
description = Taifho board game and engine with MCTS
long_description = Wont exist
long_description_content_type = text/markdown
url = https://github.com/PrzeChoj/MSI2
project_urls =
    Bug Tracker = https://github.com/PrzeChoj/MSI2/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
	Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    scipy
    pandas
test_suite = test

[options.packages.find]
where = src